WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24226
[SOUP] HTTP status text is never set
https://bugs.webkit.org/show_bug.cgi?id=24226
Summary
[SOUP] HTTP status text is never set
Adam Bergkvist
Reported
2009-02-27 07:13:23 PST
See related bug:
https://bugs.webkit.org/show_bug.cgi?id=3547
Attachments
patch
(1.36 KB, patch)
2009-02-27 07:21 PST
,
Adam Bergkvist
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Bergkvist
Comment 1
2009-02-27 07:21:18 PST
Created
attachment 28070
[details]
patch
Alexey Proskuryakov
Comment 2
2009-02-27 23:42:52 PST
Comment on
attachment 28070
[details]
patch r=me
Gustavo Noronha (kov)
Comment 3
2009-02-28 07:11:59 PST
Landed as
r41319
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug