2009-02-28  Adam Bergkvist <adam.bergkvist@ericsson.com>

Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=24226
        [SOUP] HTTP status text is never set

        Set HTTP status text to SoupMessage reason_phrase.

        * platform/network/soup/ResourceHandleSoup.cpp:
        (WebCore::fillResponseFromMessage):

Canonical link: https://commits.webkit.org/33389@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41319 268f45cc-cd09-0410-ab3c-d52691b4dbfc